--- a/templates/book.html
+++ b/templates/book.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col-sm-4">
         <img id="goodreads" src="../static/goodreads.jpg" width="200px" height="45px" />
-        <h5>Number of Ratings: {{bookInfo[1].ratings_count}}</h5>
+        <h5>Number of Ratings: {{bookInfo[1].work_ratings_count}}</h5>
         <h5>Average Rating: {{bookInfo[1].average_rating}}</h5>
         <h5>
             <a href="https://www.goodreads.com/search?q={{bookInfo[0]['title']}}">Goodreads page</a>
